# ggit

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ggit-git-win32.c  ggit-git.c  ggit-git.h  ggit-graph.c  ggit-graph.h  ggit-ui-settings.h  ggit-ui.c  ggit-ui.h  ggit-vector.c  ggit-vector.h  ggit.c  ggit.md  sasdf.txt
